--- a/woosh-photo-app/LoginViewController.xib
+++ b/woosh-photo-app/LoginViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -35,17 +35,14 @@
                     <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES"/>
                 </textField>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Don't have an account?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="52">
-                    <rect key="frame" x="20" y="489" width="280" height="21"/>
+                    <rect key="frame" x="20" y="190" width="280" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="56"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60">
-                    <rect key="frame" x="20" y="518" width="280" height="30"/>
+                    <rect key="frame" x="20" y="219" width="280" height="30"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="Sign Up Here">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -54,7 +51,7 @@
                         <action selector="signupTapped:" destination="-1" eventType="touchUpInside" id="71"/>
                     </connections>
                 </button>
-                <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Dvl-IB-vlM">
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dvl-IB-vlM">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <items>
@@ -70,22 +67,25 @@
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="4" firstAttribute="top" secondItem="1" secondAttribute="top" id="5"/>
-                <constraint firstItem="4" firstAttribute="bottom" secondItem="1" secondAttribute="bottom" id="6"/>
-                <constraint firstItem="4" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="7"/>
-                <constraint firstItem="4" firstAttribute="trailing" secondItem="1" secondAttribute="trailing" id="24"/>
-                <constraint firstItem="36" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="41"/>
-                <constraint firstAttribute="trailing" secondItem="36" secondAttribute="trailing" constant="20" symbolic="YES" id="44"/>
-                <constraint firstItem="45" firstAttribute="top" secondItem="36" secondAttribute="bottom" constant="8" id="46"/>
-                <constraint firstItem="45" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="47"/>
-                <constraint firstAttribute="trailing" secondItem="45" secondAttribute="trailing" constant="20" symbolic="YES" id="49"/>
-                <constraint firstItem="52" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="58"/>
-                <constraint firstAttribute="trailing" secondItem="52" secondAttribute="trailing" constant="20" symbolic="YES" id="59"/>
-                <constraint firstItem="60" firstAttribute="top" secondItem="52" secondAttribute="bottom" constant="8" symbolic="YES" id="62"/>
-                <constraint firstAttribute="bottom" secondItem="60" secondAttribute="bottom" constant="20" id="63"/>
-                <constraint firstAttribute="trailing" secondItem="60" secondAttribute="trailing" constant="20" symbolic="YES" id="64"/>
-                <constraint firstItem="60" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="66"/>
-                <constraint firstItem="36" firstAttribute="top" secondItem="1" secondAttribute="top" constant="96" id="84"/>
+                <constraint firstItem="60" firstAttribute="top" secondItem="52" secondAttribute="bottom" constant="8" symbolic="YES" id="3FI-WA-6TF"/>
+                <constraint firstItem="36" firstAttribute="top" secondItem="Dvl-IB-vlM" secondAttribute="bottom" constant="52" id="6Zy-91-IrH"/>
+                <constraint firstAttribute="trailing" secondItem="36" secondAttribute="trailing" constant="20" symbolic="YES" id="7PH-Do-WHy"/>
+                <constraint firstItem="52" firstAttribute="leading" secondItem="45" secondAttribute="leading" id="9Ky-GE-EY2"/>
+                <constraint firstItem="Dvl-IB-vlM" firstAttribute="leading" secondItem="4" secondAttribute="leading" id="H8e-E9-R97"/>
+                <constraint firstItem="45" firstAttribute="trailing" secondItem="52" secondAttribute="trailing" id="NuR-zF-kyS"/>
+                <constraint firstItem="45" firstAttribute="top" secondItem="36" secondAttribute="bottom" constant="8" symbolic="YES" id="PzB-LE-rxJ"/>
+                <constraint firstAttribute="bottom" secondItem="4" secondAttribute="bottom" id="QNO-48-rr1"/>
+                <constraint firstItem="52" firstAttribute="trailing" secondItem="60" secondAttribute="trailing" id="Ubb-kU-xtv"/>
+                <constraint firstItem="4" firstAttribute="top" secondItem="Dvl-IB-vlM" secondAttribute="top" id="cve-Qv-hs5"/>
+                <constraint firstItem="36" firstAttribute="leading" secondItem="45" secondAttribute="leading" id="de6-YJ-AYo"/>
+                <constraint firstItem="Dvl-IB-vlM" firstAttribute="centerX" secondItem="36" secondAttribute="centerX" id="eff-Nd-Kd2"/>
+                <constraint firstItem="Dvl-IB-vlM" firstAttribute="top" secondItem="1" secondAttribute="top" id="f8u-DR-H9g"/>
+                <constraint firstItem="52" firstAttribute="top" secondItem="45" secondAttribute="bottom" constant="26" id="gkP-gF-xkC"/>
+                <constraint firstItem="4" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="lPt-ya-Y9P"/>
+                <constraint firstItem="36" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="20" symbolic="YES" id="qZw-jM-O0J"/>
+                <constraint firstItem="4" firstAttribute="trailing" secondItem="Dvl-IB-vlM" secondAttribute="trailing" id="sE8-EM-3kb"/>
+                <constraint firstItem="60" firstAttribute="leading" secondItem="52" secondAttribute="leading" id="woJ-0b-W2f"/>
+                <constraint firstItem="45" firstAttribute="trailing" secondItem="36" secondAttribute="trailing" id="xRn-6c-ebm"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
